@@ -103,7 +103,8 @@ Data Changes:
 - Strike the Darkness can now properly be learned with Alpine Wrestling, German Jujitsu, Esdo, Urban Brawl Parkour, and/or Sternschutz Tactical. Closes #5140
 - Fancy Blocks, Text-Only, and Formatted Text-Only sheets no longer show priority entries for characters made with Point Buy or Life Modules.
 - Incompetent now properly sets all skills in the chosen skill group to Unaware, meaning they can also not be learned until the quality is bought off. Existing characters with the quality will need to re-apply improvements to see the change reflected on their sheets. Fixes #5111.
-- Fixed the W Zone and Bad Neighborhood lifestyle qualities not correctly modifying the Area value. 
+- Fixed the W Zone and Bad Neighborhood lifestyle qualities not correctly modifying the Area value.
+- Added missing Imaging Scope to the Parashield Dart Rifle.
 
 Changed/New Strings:
 - LimitCondition_SkillsActiveLeadership
